I added the Erica's changes

--- a/sections/product_detail_information.liquid
+++ b/sections/product_detail_information.liquid
@@ -233,7 +233,7 @@
                                     {%- endif -%}
 
                                     {%- if product_option.name == "Size" -%}
-                                        <a href="/pages/customer-service-fur-jacket-size" target="_blank" class="product-info__size-link quick-link quick-link_size_sm quick-link_dark">Size Guide</a>
+                                        <a href="/pages/size-chart" target="_blank" class="product-info__size-link quick-link quick-link_size_sm quick-link_dark">Size Guide</a>
                                     {%- endif -%}                        
                                 </div>   
 
