--- a/web-flair/app/sass/blocks/second-banner/_second-banner.sass
+++ b/web-flair/app/sass/blocks/second-banner/_second-banner.sass
@@ -52,6 +52,18 @@
 	justify-content: space-between
 
 
+.second_banner__shop_button	
+	bottom: 40px
+	box-sizing: border-box
+	display: flex 
+	justify-content: center
+	margin: 0	
+	padding: 10px
+	position: absolute
+	right: 0
+	width: 100%
+
+
 .banners .second_banner_desktop
 	display: block
 
@@ -67,8 +79,9 @@
 	@include media-breakpoint-down(sm) 
 	   display: none	   
 
+		
 .banners .second_banner_mobile
 	display: none
 
 	@include media-breakpoint-down(sm) 
-	   display: block		   
+	   display: block		
