I added the Erica's changes

--- a/snippets/globo-megamenu-script.liquid
+++ b/snippets/globo-megamenu-script.liquid
@@ -5,7 +5,7 @@
     shop 	: '{{ shop.permanent_domain }}',
     menu	: "main-menu",
     themeId	: 796,
-    menuClass	: 'globomenu-store-796 globomenu globomenu-main globomenu-horizontal globomenu-transition-shift globomenu-items-align-left  globomenu-trigger-hover globomenu-responsive globomenu-responsive-collapse search-2 ',
+    menuClass	: 'globomenu-store-796 globomenu globomenu-main globomenu-horizontal globomenu-transition-fade globomenu-items-align-left  globomenu-trigger-hover globomenu-responsive globomenu-responsive-collapse ',
     mobileBtn	: '<a class="globomenu-responsive-toggle-796 globomenu-responsive-toggle globomenu-responsive-toggle-content-align-left"><i class="fa fa-bars"></i>Menu</a>',
     linkLists	: {
       {% for list in linklists %}
