--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -23,10 +23,12 @@
         <div class="login-popup__text">
           <div class="login-popup__text-title">Sign up today and start living luxuriously!</div>
           <div class="login-popup__list">
-            <li class="login-popup__list-item">Receive <strong>20%</strong>  off your first purchase</li>
+            <li class="login-popup__list-item">Receive <strong>20%</strong>  off your first purchase* </li>
             <li class="login-popup__list-item">Automatic enrollment in our upcoming referral and loyalty programs.</li>
             <li class="login-popup__list-item">Sneak peeks at the newest arrivals.</li>
-            <li class="login-popup__list-item">Access to exclusive deals throughout the year.</li>
+            <li class="login-popup__list-item">Access to exclusive deals throughout the year.<br><br><span style="font-size:11px;float:right;">*Exclusions Apply</span>
+            
+            </li>
           </div>
         </div>
       </div>
