--- a/web-flair/app/sass/_media.sass
+++ b/web-flair/app/sass/_media.sass
@@ -1140,6 +1140,12 @@
 
 		.additional-checkout-button 
 			margin-bottom: 10px !important
+			
+	.orders-table__remove-link
+		bottom: 0px 
+		text-align: center
+		width: 100%
+
 
 
 /*==========  Mobile First  ==========*/
