--- a/web-flair/app/sass/blocks/form-card/_form-card.sass
+++ b/web-flair/app/sass/blocks/form-card/_form-card.sass
@@ -162,6 +162,7 @@
 
 .form-card__table-body-item
 	flex: 0 0 25%
+	position: relative
 
 .form-card__table-body-item_product
 	display: -webkit-flex
