--- a/sections/cart_content.liquid
+++ b/sections/cart_content.liquid
@@ -30,7 +30,12 @@
 												</a>
 												<a href="{{item.url}}" class="form-card__table-name">{{ item.title | escape }}</a>
 											</div>
-											<div class="form-card__table-body-item text-center">{{item.quantity}}</div>
+											<div class="form-card__table-body-item text-center">
+											   {{item.quantity}}
+												<a href="#" 
+													class="quick-link orders-table__remove-link quick-link_size_sm remove-cart"
+													data-line="{{forloop.index}}">Remove</a>											   
+											</div>
 											<div class="form-card__table-body-item text-right">{{ item.line_price | money }}</div>
 										</div>
 
@@ -46,10 +51,11 @@
 
 							<div class="form-card__block">
 								<div class="form-card__detail">
-									<div class="form-card_detail-name"><b>Grandtotal</b></div>
+									<div class="form-card_detail-name"><b>Grand total</b></div>
 									<div class="form-card_detail-value">{{ cart.total_price | money }}</div>
 								</div>
 							</div>
+							
 
 							<div class="form-card__block">
 								<div class="form-card__coupon">
@@ -61,18 +67,25 @@
 								</div>
 							</div>
 
-                            <input class="form-button" type="submit" name="checkout" value="Proceed to checkout" />
+							<div class="form-card__block">
+								<div>
+									<input type="checkbox" id="agree-mobile" />
+									<span> I agree with the </span>
+									<span><a href="#" id="term-conditions-mobile-link">terms and conditions.</a></span>
+								</div>
+
+								<div class="term-conditions-text" id="term-conditions-mobile-text" style="display: none">
+									{{section.settings.term_conditions}}
+								</div>
+							</div>
+
+
+                            <input class="form-button" type="submit" name="checkout" id="checkout-mobile-button" value="Proceed to checkout" />
 							
 						<div class="main-cart__payment form-card__payment">
-							<div class="form-card__payment-item">
-								<img src="{{ 'affirm-mobile.png' | asset_url }}" alt="Affirm" class="form-card__payment-image img-responsive">
-							</div>
-							<div class="form-card__payment-item">
-								<img src="{{ 'amazon-mobile.png' | asset_url }}" alt="Amazon" class="form-card__payment-image img-responsive">
-							</div>
-							<div class="form-card__payment-item">
-								<img src="{{ 'paypal-mobile.png' | asset_url }}" alt="Paypal" class="form-card__payment-image img-responsive">
-							</div>
+							{% if additional_checkout_buttons %}
+								{{ content_for_additional_checkout_buttons }}
+							{% endif %}						
 						</div>							
 						{%- else -%}
 							
