--- a/web-flair/app/sass/blocks/main-category/_main-category.sass
+++ b/web-flair/app/sass/blocks/main-category/_main-category.sass
@@ -31,7 +31,8 @@
 	text-decoration: line-through
 
 	@include media-breakpoint-down(sm)
-		font-size: 14px
+		font-size: 16px
+		margin-left: 8px
 		white-space: nowrap		
 
 
