--- a/web-flair/app/sass/_media.sass
+++ b/web-flair/app/sass/_media.sass
@@ -898,7 +898,13 @@
 	.product-info__descr
 		font-size: 28px
 
+	.product-info__price-rate
+		align-items: center
+
 	.product-info__price
+		align-items: center
+		display: flex
+		justify-content: space-between		
 		font-size: 20px
 
 	.product-info__color-boxes
