--- a/snippets/rate_reviews.liquid
+++ b/snippets/rate_reviews.liquid
@@ -1,1 +1,1 @@
-<span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>
+{% comment %}<span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>{% endcomment %}
