--- a/templates/page.reviews.liquid
+++ b/templates/page.reviews.liquid
@@ -16,8 +16,9 @@
                                            </a>   
                                         </div>
                                     </div>                                                
-                                                                    
+                                            {% comment %}                 
                                     <div id="shopify-product-reviews" data-id="{{product.id}}">{{ product.metafields.spr.reviews }}</div>
+      {% endcomment %}       
                                 </div>
                             {% endif%}
                         {%- endfor -%}
