--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -36,3 +36,5 @@
 {% include 'zendapps_recent_products' %}
 
 
+
+{% include 'judgeme_widgets', widget_type: 'judgeme_review_widget', concierge_install: true, auto_install: true %}
