I added the cta button text as dynamic in the preview 1 and 2 section

--- a/sections/categories.liquid
+++ b/sections/categories.liquid
@@ -73,7 +73,12 @@
       "id": "preview1_link",
       "type": "url",
       "label": "Link for Preview 1"
-		},		
+		},
+		{
+      "id": "preview1_text_button",
+      "type": "text",
+      "label": "Cta Title for Preview 1"
+		},    		
     {
       "id": "preview2",
       "type": "image_picker",
@@ -104,6 +109,11 @@
       "type": "url",
       "label": "Link 2 for Preview 2"
 		},
+		{
+      "id": "preview2_text_button",
+      "type": "text",
+      "label": "Cta Title for Preview 2"
+		},    
     {
       "id": "banner_full",
       "type": "image_picker",
