--- a/snippets/home_categories_content.liquid
+++ b/snippets/home_categories_content.liquid
@@ -3,7 +3,7 @@
             <!--<h2>SHOP NEW MARKDOWNS AND NEW ITEMS UP TO 65% OFF</h2>
             <h2>SHOP ML FURS SALE NOW</h2> -->
             <div class="banner-preview__text">{{section.settings.preview1_description}}</div>
-            <a href="{{section.settings.preview1_link}}" class="banner-preview__button button-preview">Shop Now</a>
+            <a href="{{section.settings.preview1_link}}" class="banner-preview__button button-preview">{{section.settings.preview1_text_button}}</a>
         </div>
 
     </div>
@@ -15,7 +15,7 @@
           <h1>Last Day to ship December 21st</h1> -->
             <div class="banner-preview__text">{{section.settings.preview2_description}}</div>
             <div class="banner-preview__buttons">
-                <a href="{{section.settings.preview2_link_1}}" class="banner-preview__button button-preview">Free Shipping</a>
+                <a href="{{section.settings.preview2_link_1}}" class="banner-preview__button button-preview">{{section.settings.preview2_text_button}}</a>
                 <!--<a href="{{section.settings.preview2_link_2}}" class="banner-preview__button button-preview">Shop </a>-->
             </div>
         </div>
