--- a/sections/collection_content.liquid
+++ b/sections/collection_content.liquid
@@ -45,10 +45,17 @@
 			<div class="row">
 			    
 				<div class="col-lg-3 main-category__filter-container" style="display:none">
+                      <div class="filter clear-filters" style="display:none;">
+                         <span class="clear-filters__item-menu">
+							<label class="checkbox-custom filter__checkbox-custom">
+							<input name="clear_filter" data-group-name="Size" type="checkbox" value="" id="chk_clear_filter" data-url="{{collection.url}}"> 
+								<i class="helper"></i> <span>Clear Filters</span></label>
+	                         <label>
+	                     </span>
+                       </div>                  
 				   <div class="filter collection-filters-container cf-select-wrapper cf-select-wrapper" style="display:none">
 				   </div>
 				</div>
-
 
 				<div class="col">
 					<div class="main-category__product-list">					   			
