--- a/web-flair/app/sass/blocks/filter/_filter.sass
+++ b/web-flair/app/sass/blocks/filter/_filter.sass
@@ -1,5 +1,30 @@
 .filter
-	padding: 30px 0
+	padding: 10px 0
+
+.clear-filters
+	border-bottom: 1px solid $gray
+	max-height: 80px
+	padding-left: 5px
+	padding-top: 5px
+	overflow-y: hidden !important
+	padding-bottom: 10px !important
+
+	label
+		display: block
+		min-height: 24px
+		padding-left: 25px
+		font-weight: normal
+		cursor: pointer
+		vertical-align: sub
+		margin-bottom: 15px
+		position: relative
+
+		span 
+           font-size: 14px
+           font-family: $light
+           margin-left: 5px
+           text-transform: none			
+
 
 .filter__item
 	border-bottom: 1px solid $gray
