I changed the cart page

--- a/sections/cart_content.liquid
+++ b/sections/cart_content.liquid
@@ -57,7 +57,7 @@
 							</div>
 							
 
-							<div class="form-card__block">
+							<!--<div class="form-card__block">
 								<div class="form-card__coupon">
 									<div class="form-card__coupon-text">Coupon code:</div>
 									<form class="main-cart__block-input block-input">
@@ -66,6 +66,7 @@
 									</form>
 								</div>
 							</div>
+							-->
 
 							<div class="form-card__block">
 								<div>
