I added the changes did in shopify directly

--- a/snippets/home_categories_content.liquid
+++ b/snippets/home_categories_content.liquid
@@ -11,8 +11,8 @@
 
         <div class="banner-preview" style="background-image: url({{ preview2 | img_url: 'master' }});">
               
-            <!--<h2>HOLIDAY SHIPPING DEALINES: Free 2 day shipping through December 20th</h2>
-          <h1>Last Day to ship December 21st</h1> -->
+            <!--<h2>SHOP THE LARGEST FUR COLLECTION ONLINE WITH MLFURS YEAR END SALES</h2>
+          <h1>Shop Now to Save</h1> -->
             <div class="banner-preview__text">{{section.settings.preview2_description}}</div>
             <div class="banner-preview__buttons">
                 <a href="{{section.settings.preview2_link_1}}" class="banner-preview__button button-preview">{{section.settings.preview2_text_button}}</a>
