I added the Google Pixel Code

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -76,6 +76,18 @@
   <script src="//scripts.iconnode.com/54769.js"></script>
 
   {% include 'judgeme_core' %}
+
+  <!-- Global site tag (gtag.js) - Google Ads: 966677696 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-966677696"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-966677696');
+  </script>
+
+
 </head>
 
 <body class="body template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" id="{{ page_title | handle }}">  
